# python-bigquery-datalineage

./: Makefile  README.md  create_tables.sh  pyproject.toml
src/: bigquery_api.py  catalog_api.py  client_factory.py  lineage_api.py  main.py
tests/: test_catalog.py  test_lineage.py  test_usecase.py
